# VidCommerce

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
core/: scenario1_agent.py  scenario2_agent.py  scenario3_agent.py
test/: test_generate_template.py  test_scenario1_agent.py  test_scenario2_agent.py  test_scenario3_agent.py  test_video_analyzer.py  test_video_generator.py
tool/: fetch_client.py  image_analyzer.py  product_collector.py  url_builder.py  video_analyzer.py  video_generator.py  video_mixer.py
