[tool.poetry]
name = "vidcommerce"
version = "0.1.0"
description = "AI-powered e-commerce video generation system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vidcommerce"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
pillow = "^10.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
